// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render panel with content 1`] = `
<div
  class="vxteaser-panel"
  data-testid="panel"
  style="width: 50%;"
>
  Panel content
</div>
`;

exports[`render panel with content and modifier 1`] = `
<div
  class="vxteaser-panel -mb-5"
  data-testid="panel"
  style="width: 50%;"
>
  Panel content
</div>
`;
